--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
 
+      - name: remove sudo
+        run: sudo rm /etc/sudoers.d/runner
+      
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -44,3 +47,5 @@ jobs:
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+      
+      - run: sudo killall -9 agent
